src/objects/CMSCashOrderCurrencySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cash_Order_API_Field_Label__c</fullName>
        <inlineHelpText>Used to validate the minimum amount matches what the user has input</inlineHelpText>
        <label>Cash Order API Field Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <label>Denomination</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Coin_Bag_Delivery_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Coin Bag Delivery Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_Value__c</fullName>
        <inlineHelpText>Indicates the minimum value allows for Cash Order Amount</inlineHelpText>
        <label>Minimum Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CMS Cash Order Currency Settings</label>
</CustomObject>